--- a/scripts/RMED901 Group 3 report.Rmd
+++ b/scripts/RMED901 Group 3 report.Rmd
@@ -1,5 +1,6 @@
 ---
 title: "RMED901 Group 3 report"
+Authors: "Amalie Austgulen, André Høberg, Ariell Thale Toftesund Longva, Ghazal Lessan Toussi"
 output: html_document
 date: "2022-09-15"
 ---
