--- a/scripts/RMED901 Group 3 report.Rmd
+++ b/scripts/RMED901 Group 3 report.Rmd
@@ -59,7 +59,39 @@ In the skim, we saw that there is 15527 missing values for the column payor_grou
 naniar::gg_miss_var(data_nontidy)
 ```
 
-**Exploring the missing data**
+
+**Wrangling the data**
+After tidying, we wished to wrangle it to certain specifications. We individually wrote code to:
+-Remove unnecessary columns: row, test_id and demo_group
+-Change the variable types
+-Create a new set of columns showing whether rec_ver_Tat is higher than 100 or not, showing pan_day in weeks, showing drive_thru_ind as Yes/No and showing the multiplication of ct_result and orderset for each person
+-Set the order of columns as: id, age, gender and other columns
+-Arrange ID column to increasing numbers
+-Join an additional dataset to the main dataset
+
+We then took all our individual code and wrote a pipeline which could do all of this with our tidy data, creating a new data-set in the progress: data_wrangled
+```{r}
+data_wrangled <- 
+  data_tidy %>% 
+  select(-row,-"1_test_id", -demo_group) %>% 
+  mutate(age = as.numeric(age),
+         pan_day = as.numeric(pan_day),
+         drive_thru_ind = as.numeric(drive_thru_ind),
+         ct_result = as.numeric(ct_result),
+         id = as.numeric(id)) %>% 
+  mutate(rec_ver_tat= if_else(rec_ver_tat>=100, "High", "Low")) %>% 
+  mutate(pan_weeks = pan_day / 7) %>% 
+  mutate(drive_thru_ind = if_else(drive_thru_ind == 1, "Yes", "No")) %>% 
+  mutate(ct_order_result = ct_result * orderset) %>% 
+  select(c(id, age, gender), everything()) %>%
+  arrange(id) %>% 
+  left_join(data_join)
+```
+
+**Exploring the data**
+Ariell and Amalie should write about this
+
+*Exploring the missing data*
 After exploring the data in data_wrangled, we wished to look at the missing data. To do this, we first used the gg_miss_var function.
 ```{r}
 naniar::gg_miss_var(data_wrangled)
@@ -116,43 +148,6 @@ data_wrangled %>%
 For those tested in a clinical lab, there are 6407 missing values for payor_group and 6406 for patient_class. For the line clinical lab, there are 218 missing values for payor_group and 218 for patient_class.  
 The majority of the missing values are therefore connected to the fact that some are tested in a clinical lab.
 
-
-
-
-
-
-
-
-**Wrangling the data**
-After tidying, we wished to wrangle it to certain specifications. We individually wrote code to:
--Remove unnecessary columns: row, test_id and demo_group
--Change the variable types
--Create a new set of columns showing whether rec_ver_Tat is higher than 100 or not, showing pan_day in weeks, showing drive_thru_ind as Yes/No and showing the multiplication of ct_result and orderset for each person
--Set the order of columns as: id, age, gender and other columns
--Arrange ID column to increasing numbers
--Join an additional dataset to the main dataset
-
-We then took all our individual code and wrote a pipeline which could do all of this with our tidy data, creating a new data-set in the progress: data_wrangled
-```{r}
-data_wrangled <- 
-  data_tidy %>% 
-  select(-row,-"1_test_id", -demo_group) %>% 
-  mutate(age = as.numeric(age),
-         pan_day = as.numeric(pan_day),
-         drive_thru_ind = as.numeric(drive_thru_ind),
-         ct_result = as.numeric(ct_result),
-         id = as.numeric(id)) %>% 
-  mutate(rec_ver_tat= if_else(rec_ver_tat>=100, "High", "Low")) %>% 
-  mutate(pan_weeks = pan_day / 7) %>% 
-  mutate(drive_thru_ind = if_else(drive_thru_ind == 1, "Yes", "No")) %>% 
-  mutate(ct_order_result = ct_result * orderset) %>% 
-  select(c(id, age, gender), everything()) %>%
-  arrange(id) %>% 
-  left_join(data_join)
-```
-
-**Exploring the data**
-Ariell and Amalie should write about this
 
 **Stratifying the data**
 We then stratified the data and reported min, max, mean and sd of a numeric column for a defined set of observations:
