--- a/scripts/RMED901 Group 3 report.Rmd
+++ b/scripts/RMED901 Group 3 report.Rmd
@@ -1,8 +1,9 @@
 ---
 title: "RMED901 Group 3 report"
-Authors: "Amalie Austgulen, André Høberg, Ariell Thale Toftesund Longva, Ghazal Lessan Toussi"
+Authors: Amalie Austgulen, André Høberg, Ariell Thale Toftesund Longva, Ghazal Lessan
+  Toussi
+date: "15-09-2022 to 22-09-2022"
 output: html_document
-date: "2022-09-15"
 ---
 This is the report for group 3 in RMED901.
 
@@ -130,13 +131,15 @@ tail(data_wrangled)
 summary(data_wrangled)
 ```
 
-The exploration of the data shows that the data is much tidyer after the wrangling. Glimpse is showing the 18 columns in the dataset. However when you present it with the functions head and tail, it is easy to see what information belongs to which patient, and it is easy to interpret the dataset. 
+The exploration of the data shows that the data is much tidyer after the wrangling. Glimpse is showing the 18 columns in the dataset. However when you present it with the functions head and tail, it is easy to see what information belongs to which patient, and it is easy to interpret the dataset.  
+
 *Exploring the missing data*
 
 After exploring the data in data_wrangled, we wished to look at the missing data. To do this, we first used the gg_miss_var function.
 ```{r}
 naniar::gg_miss_var(data_wrangled)
 ```
+
 This returns more than 8000 missing values for the columns payor_group and patient_class, and <500 for ct_result.  
 
 
@@ -199,7 +202,7 @@ We then stratified the data and reported min, max, mean and sd of a numeric colu
 -Only those tested after the 50th day of the pandemic  
 -Only for those who did not get drive through testing and had a CT result lower than 35 
 
-*Only inpatients*
+*Only inpatients*  
 Since we needed a numeric column we used age to check the min, max, mean and sd. 
 
 ```{r}
@@ -208,7 +211,7 @@ data_wrangled %>%
   summarize(min(age, na.rm = T),max(age, na.rm = T),mean(age, na.rm = T), sd(age, na.rm = T))
 ```
 
-*CT result equal to 45*
+*CT result equal to 45*  
 This code stratifies the data set based on ct_results equal to 45. The data was summarized based on the minimum, maximum, mean, and standard deviation of the pan_day.
 ```{r}
 data_wrangled %>%
@@ -243,20 +246,23 @@ gender_payor_table <-
   data_wrangled %>%
   with(table(gender, payor_group))
 ```
+```{r, echo = FALSE}
+gender_payor_table
+```
+
 
 **Plots**  
 We then made a set of plots to investigate some questions:  
--If there were gender differences in frequency of test-taking at drive-through
--If there were more tests in any of the sex groups
--If the distribution of ct_results differ with the sex groups
+-If there were gender differences in frequency of test-taking at drive-through  
+-If there were more tests in any of the sex groups  
+-If the distribution of ct_result differ with the sex groups  
+-If the distribution of ct_result differ with payor_group
 
-EVERYONE SHOULD ADD THEIR PLOT TO THE LIST AND THEN WRITE ABOUT IT UNDER A SUBHEADER
 
-*every "subheader" is in itallics*
 
 *Gender differences in taking the test at a drive-through*  
 We made a plot to investigate if there were more females than males that took the test at a drive-through.
-```{r}
+```{r, echo = FALSE}
 data_drivethrough <- data_wrangled %>%
   count(gender, drive_thru_ind)
 
@@ -272,7 +278,7 @@ The plot shows that there are slightly more females than males that took the tes
 
 *More tests in any sex groups*  
 We made a plot for vizualising the number of tests in both sex groups. We interpeted each observation as an independent test, and simply found the quantity of tests done on men and women.
-```{r}
+```{r, echo = FALSE}
 count_gender <- 
   data_wrangled %>%
   count(gender)
@@ -291,12 +297,15 @@ This shows that there is a difference between men and women in number of tests, 
 
 *Distribution of ct_result in sex groups*  
 This plot helps to determine whether there is a difference in the distribution of ct_results based on gender.
-```{r}
+```{r, echo = FALSE, message = FALSE}
 data_wrangled_grouped <- data_wrangled %>%
   group_by(gender, ct_result) %>% 
   summarise(sum = sum(ct_result, na.rm=T))
+```
+```{r, include = FALSE}
 data_wrangled_grouped
-
+```
+```{r, echo = FALSE, warning = FALSE}
 ggplot(data_wrangled_grouped,  
        aes(x = as.factor(gender), y = ct_result)) +
   xlab("gender")+
@@ -305,13 +314,13 @@ ggplot(data_wrangled_grouped,
 
 ```
 
-The box plots display the range and the median of ct_result in each group. 
+The box plots display the range and the median of ct_result in each group.  
 Compared to women, men have a broader range of ct_results. Although the highest number of ct_results belongs to women, the median is higher in men.
 
 
-**Checking if the distributution of `ct_result` differ with `payor_group`?**
+*Checking if the distributution of `ct_result` differ with `payor_group`*  
 We made a plot in order to see the distribution of ct_results within different payor_groups. 
-```{r}
+```{r, echo = FALSE, warning = FALSE}
 data_to_be_analyzed<-
   data_wrangled %>%
   count(payor_group,ct_result)
@@ -336,9 +345,11 @@ This box plot displays the range and the median of ct_result in each group, and 
 
 **Analysis**  
 We then analysed the dataset to investigate different questions:  
--If there was a difference in distributions of CT results between outcome groups
+-If there was a difference in distributions of CT results between outcome groups  
+- If there were more positive tests in the drive-through than elsewhere
+- If the number of positive tests depend on the pan_day
+- If there is an association between the age of the individual and the test result
 
-EVERYONE SHOULD ADD THEIR ANALYSIS TO THE LIST AND THEN WRITE ABOUT IT UNDER A SUBHEADER
 
 *T-test to find out whether there were more positive tests in the drive-through than elsewhere*  
 First, we wanted to look at the number of positive tests in the drive-through vs elsewhere, to see how big of an difference there were.
